--- a/index.css
+++ b/index.css
@@ -1,25 +1,26 @@
 body {
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Manrope';
     background-color: #F5F5F5;
     width: 100%;
 }
 
 h1 {
     color: #121212;
-    font-family: 'Manrope', sans-serif;    font-size: 60px;
+    font-family: 'Manrope', sans-serif;    
+    font-size: 60px;
     font-style: normal;
     font-weight: 400;
     line-height: 60px;
     letter-spacing: -1.8px;
     width: 956px;
+    margin-right: 125px;
+    margin-left: 125px;
 }
 
 .h1 {
-    padding-top: 128px;
-    padding-left: 125px;
-    padding-right: 319px;
+    padding-top: 128px;   
     padding-bottom: 30px;
-    width: 1440px;
+    width: 1400px;
     background-color: #FFFFFF;
 }
 
@@ -30,12 +31,15 @@ h1 {
     width: 1150px;
     height: 500px;
     margin-top: 30px;
+    margin-left: 125px;
+    margin-right: 125px;
+    margin-bottom: 150px;
 }
 
 .image1-text {
     color: #FFF;
     width: 430px;
-    font-family: 'Manrope', sans-serif;    font-size: 60px;
+    font-family: 'Manrope', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -53,16 +57,14 @@ h2 {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
+    width: 54px;
+    height: 25px;
     letter-spacing: -0.54px;
     text-transform: uppercase;
-    width: 51px;
-    height: 25px;
-    padding-left: 125px;
-    padding-top: 150PX;
-    padding-right: 1224px;
-    padding-bottom: 30px;
     background-color: #FFFFFF;
+    padding-left: 125px;
+    padding-right: 1221px;
+    padding-bottom: 30px;
 }
 
 .about {
@@ -105,5 +107,6 @@ a {
 }
 
 .button-area {
+    width: 1400px;
     background-color: #FFFFFF;
 }
