--- a/index.css
+++ b/index.css
@@ -46,7 +46,6 @@ h1 {
     padding-bottom: 150px;
 }
 
-
 h2 {
     color: #121212;
     font-family: Manrope;
@@ -92,14 +91,11 @@ h2 {
 }
 
 .button-area {
-    width: 1400px;
     background-color: #FFFFFF;
     padding: 0px 1020px 150px 125px;
 }
 
 .projects {
-    box-sizing: border-box;
-    width: 1400px;
     background-color: #FFFFFF;
     padding: 0px 125px 206px 125px;
 }
@@ -153,6 +149,62 @@ h3 {
     letter-spacing: -0.6px;
 }
 
+.show__all-projects {
+    text-align: center;
+    border: 1px solid #AD1818;
+    border-radius: 5px;
+}
 
+.projects__button {
+    display: block;
+    color: #AD1818;
+    text-decoration: none;
+    font-family: Manrope;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153px;
+    letter-spacing: -0.9px;
+}
 
+.projects__button:hover {
+    color:#FFF;
+    background-color: #AD1818;
+}
+
+.section {
+    background-color: #121212;
+    padding: 151px 0px 150px 125px;
+}
+
+h4 {
+    padding: 0px 0px 34px 2px;
+    color: #FFF;
+    font-family: Manrope;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.54px;
+    text-transform: uppercase;
+}
+
+.working {
+    padding-top: 15px;
+    color: #FFF;
+    font-family: Manrope;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.9px;
+}
+
+.container__img {
+    margin-bottom: 60px;
+}
+
+.container:nth-last-child(1) {
+    margin-bottom: 0px;
+}
 
